--- a/train.ipynb
+++ b/train.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "06a9f7fd-3105-4358-ac2d-baf0b14b4c70",
+   "metadata": {},
+   "source": [
+    "[![Open In SageMaker Studio Lab](https://studiolab.sagemaker.aws/studiolab.svg)](https://studiolab.sagemaker.aws/import/github/machinelearnear/custom-italian-entitites-recognition-comprehend/blob/main/train.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91aa9875-6f2b-4cdc-8f00-d694ecb79876",
    "metadata": {},
    "source": [
