--- a/train.ipynb
+++ b/train.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 191,
    "id": "345e015d-f6c4-4f35-8ba0-76b7d62b2ce1",
    "metadata": {},
    "outputs": [],
@@ -84,12 +84,13 @@
     "    except Exception:\n",
     "        continue\n",
     "        \n",
-    "df = pd.DataFrame(data)"
+    "df = pd.DataFrame(data)\n",
+    "df = df.apply(lambda x: x.astype(str).str.upper())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 192,
    "id": "b38417ce-9795-4eb1-baa4-404f8eebaa07",
    "metadata": {},
    "outputs": [
@@ -136,151 +137,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Lazio</td>\n",
-       "      <td>Roma</td>\n",
-       "      <td>Fontana</td>\n",
-       "      <td>Matteo</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Trissino</td>\n",
-       "      <td>Vicenza</td>\n",
-       "      <td>Veneto</td>\n",
-       "      <td>36070</td>\n",
-       "      <td>VI</td>\n",
-       "      <td>1930-04-24</td>\n",
-       "      <td>Via Avicenna</td>\n",
-       "      <td>8/10</td>\n",
-       "      <td>146</td>\n",
-       "      <td>Roma</td>\n",
-       "      <td>RM</td>\n",
-       "      <td>FNTMTT30D24L433K</td>\n",
+       "      <td>Calabria</td>\n",
+       "      <td>Cosenza</td>\n",
+       "      <td>Sanna</td>\n",
+       "      <td>Tiziana</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Padru</td>\n",
+       "      <td>Olbia Tempio</td>\n",
+       "      <td>Sardegna</td>\n",
+       "      <td>07020</td>\n",
+       "      <td>OT</td>\n",
+       "      <td>1969-07-23</td>\n",
+       "      <td>Contrada Acqua Di Fico</td>\n",
+       "      <td>61</td>\n",
+       "      <td>87043</td>\n",
+       "      <td>Bisignano</td>\n",
+       "      <td>CS</td>\n",
+       "      <td>SNNTZN69L63M301E</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Puglia</td>\n",
-       "      <td>Lecce</td>\n",
-       "      <td>Bianchi</td>\n",
-       "      <td>Loredana</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Campagnatico</td>\n",
-       "      <td>Grosseto</td>\n",
-       "      <td>Toscana</td>\n",
-       "      <td>58042</td>\n",
-       "      <td>GR</td>\n",
-       "      <td>1966-10-17</td>\n",
-       "      <td>Corso Umberto I</td>\n",
-       "      <td>252</td>\n",
-       "      <td>73056</td>\n",
-       "      <td>Taurisano</td>\n",
-       "      <td>LE</td>\n",
-       "      <td>BNCLDN66R57B497G</td>\n",
+       "      <td>Lombardia</td>\n",
+       "      <td>Milano</td>\n",
+       "      <td>Vella</td>\n",
+       "      <td>Alberto</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Casteltermini</td>\n",
+       "      <td>Agrigento</td>\n",
+       "      <td>Sicilia</td>\n",
+       "      <td>92025</td>\n",
+       "      <td>AG</td>\n",
+       "      <td>1966-06-14</td>\n",
+       "      <td>Piazza Lombardia</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20020</td>\n",
+       "      <td>Lazzate</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>VLLLRT66H14C275I</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Puglia</td>\n",
        "      <td>Bari</td>\n",
-       "      <td>Russo</td>\n",
-       "      <td>Alessia</td>\n",
+       "      <td>Ricci</td>\n",
+       "      <td>Calogera</td>\n",
        "      <td>F</td>\n",
-       "      <td>San Nicola Dell'alto</td>\n",
-       "      <td>Crotone</td>\n",
-       "      <td>Calabria</td>\n",
-       "      <td>88817</td>\n",
-       "      <td>KR</td>\n",
-       "      <td>1965-10-19</td>\n",
-       "      <td>Via Giacomo Matteotti</td>\n",
-       "      <td>16</td>\n",
-       "      <td>70032</td>\n",
-       "      <td>Bitonto</td>\n",
-       "      <td>BA</td>\n",
-       "      <td>RSSLSS65R59I057I</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>Parrano</td>\n",
+       "      <td>Terni</td>\n",
        "      <td>Umbria</td>\n",
-       "      <td>Perugia</td>\n",
-       "      <td>Greppi</td>\n",
-       "      <td>Maria</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Greggio</td>\n",
-       "      <td>Vercelli</td>\n",
-       "      <td>Piemonte</td>\n",
-       "      <td>13030</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>1930-07-18</td>\n",
-       "      <td>Piazza Mazzini</td>\n",
-       "      <td>46</td>\n",
-       "      <td>6083</td>\n",
-       "      <td>Bastia</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>GRPMRA30L58E163D</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lazio</td>\n",
-       "      <td>Roma</td>\n",
-       "      <td>Pappalardo</td>\n",
-       "      <td>Leonardo</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Aci Bonaccorsi</td>\n",
-       "      <td>Catania</td>\n",
-       "      <td>Sicilia</td>\n",
-       "      <td>95020</td>\n",
-       "      <td>CT</td>\n",
-       "      <td>1940-12-04</td>\n",
-       "      <td>Piazza Italia</td>\n",
-       "      <td>1</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Colleferro</td>\n",
-       "      <td>RM</td>\n",
-       "      <td>PPPLRD40T04A025N</td>\n",
+       "      <td>05010</td>\n",
+       "      <td>TR</td>\n",
+       "      <td>1970-08-23</td>\n",
+       "      <td>Via Angiulli</td>\n",
+       "      <td>17</td>\n",
+       "      <td>70013</td>\n",
+       "      <td>Castellana Grotte</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>RCCCGR70M63G344T</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   region province     surname      name sex    birth_municipality  \\\n",
-       "0   Lazio     Roma     Fontana    Matteo   M              Trissino   \n",
-       "1  Puglia    Lecce     Bianchi  Loredana   F          Campagnatico   \n",
-       "2  Puglia     Bari       Russo   Alessia   F  San Nicola Dell'alto   \n",
-       "3  Umbria  Perugia      Greppi     Maria   F               Greggio   \n",
-       "4   Lazio     Roma  Pappalardo  Leonardo   M        Aci Bonaccorsi   \n",
+       "      region province surname      name sex birth_municipality birth_province  \\\n",
+       "0   Calabria  Cosenza   Sanna   Tiziana   F              Padru   Olbia Tempio   \n",
+       "1  Lombardia   Milano   Vella   Alberto   M      Casteltermini      Agrigento   \n",
+       "2     Puglia     Bari   Ricci  Calogera   F            Parrano          Terni   \n",
        "\n",
-       "  birth_province birth_region birth_cap birth_province_code   birthdate  \\\n",
-       "0        Vicenza       Veneto     36070                  VI  1930-04-24   \n",
-       "1       Grosseto      Toscana     58042                  GR  1966-10-17   \n",
-       "2        Crotone     Calabria     88817                  KR  1965-10-19   \n",
-       "3       Vercelli     Piemonte     13030                  VC  1930-07-18   \n",
-       "4        Catania      Sicilia     95020                  CT  1940-12-04   \n",
+       "  birth_region birth_cap birth_province_code   birthdate  \\\n",
+       "0     Sardegna     07020                  OT  1969-07-23   \n",
+       "1      Sicilia     92025                  AG  1966-06-14   \n",
+       "2       Umbria     05010                  TR  1970-08-23   \n",
        "\n",
-       "                 address house_number    cap municipality province_code  \\\n",
-       "0           Via Avicenna         8/10    146         Roma            RM   \n",
-       "1        Corso Umberto I          252  73056    Taurisano            LE   \n",
-       "2  Via Giacomo Matteotti           16  70032      Bitonto            BA   \n",
-       "3         Piazza Mazzini           46   6083       Bastia            PG   \n",
-       "4          Piazza Italia            1     34   Colleferro            RM   \n",
+       "                  address house_number    cap       municipality  \\\n",
+       "0  Contrada Acqua Di Fico           61  87043          Bisignano   \n",
+       "1        Piazza Lombardia           18  20020            Lazzate   \n",
+       "2            Via Angiulli           17  70013  Castellana Grotte   \n",
        "\n",
-       "     codice_fiscale  \n",
-       "0  FNTMTT30D24L433K  \n",
-       "1  BNCLDN66R57B497G  \n",
-       "2  RSSLSS65R59I057I  \n",
-       "3  GRPMRA30L58E163D  \n",
-       "4  PPPLRD40T04A025N  "
+       "  province_code    codice_fiscale  \n",
+       "0            CS  SNNTZN69L63M301E  \n",
+       "1            MI  VLLLRT66H14C275I  \n",
+       "2            BA  RCCCGR70M63G344T  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 229,
    "id": "cc5c86b3-7f64-4c7f-ae2b-e8fc5887e0af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # remove overlapping entities\n",
+    "# df.drop(df[df.name.apply(lambda x: len(x.split())) > 1].index, inplace=True)\n",
+    "# df.drop(df[df.surname.apply(lambda x: len(x.split())) > 1].index, inplace=True)\n",
+    "\n",
+    "# for col in ['name','surname']:\n",
+    "#     df.drop(df[df.apply(lambda x: x[col] in x['address'],axis=1)].index, inplace=True)\n",
+    "#     df.drop(df[df.apply(lambda x: x[col] in x['municipality'],axis=1)].index, inplace=True)\n",
+    "    \n",
+    "# # df.drop(df[df.apply(lambda x: x['municipality'] in x['address'],axis=1)].index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "95defc18-ad44-426f-9142-3d322b571e05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,15 +260,13 @@
     "df.drop(df[df.surname.apply(lambda x: len(x.split())) > 1].index, inplace=True)\n",
     "\n",
     "for col in ['name','surname']:\n",
-    "    df.drop(df[df.apply(lambda x: x[col] in x['address'],axis=1)].index, inplace=True)\n",
-    "    df.drop(df[df.apply(lambda x: x[col] in x['municipality'],axis=1)].index, inplace=True)\n",
-    "    \n",
-    "df.drop(df[df.apply(lambda x: x['municipality'] in x['address'],axis=1)].index, inplace=True)"
+    "    for row in df[col]:\n",
+    "        df.drop(df[df.address.str.contains(row)].index,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 234,
    "id": "94ac81e0-569e-4d73-9cb3-0db2770384a6",
    "metadata": {},
    "outputs": [],
@@ -306,7 +275,7 @@
     "    # text = re.sub(r\"[^a-zA-Z0-9]+\",'', str(string))\n",
     "    text = str(text)\n",
     "    if len(text.split()) > 1:\n",
-    "        return ' '.join([remove_special_characters(s) for s in text.split()])\n",
+    "        return ' '.join([remove_special_characters(s) for s in text.split() if len(s) >= 3])\n",
     "    else:\n",
     "        return remove_special_characters(text)\n",
     "    \n",
@@ -316,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 235,
    "id": "8e10e9a6-560c-4da4-a7ee-0019e7f4ad67",
    "metadata": {},
    "outputs": [],
@@ -336,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 236,
    "id": "208babbc-9b77-4f54-9c3a-6f48944353e7",
    "metadata": {},
    "outputs": [],
